# zenity-dialog

./: Cargo.toml  README.md
src/: arg.rs  dialog.rs  error.rs  lib.rs
src/dialog/: application.rs  calendar.rs  entry.rs  error.rs  info.rs
