[package]
name = "zenity-dialog"
version = "0.2.2"
authors = ["Brian Heise <bnheise@gmail.com>"]
description = "Provides a statically typed wrapper around the Zenity dialog rendering tool for Linux."
keywords = ["zenity", "dialog", "linux", "wrapper"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "alloc",
], optional = true }
thiserror = "1.0.61"

[features]
default = []
chrono = ["dep:chrono"]
