[package]
name = "zenity-dialog"
version = "0.3.5"
authors = ["Brian Heise <bnheise@gmail.com>"]
description = "Provides a statically typed wrapper around the Zenity dialog rendering tool for Linux."
keywords = ["zenity", "dialog", "linux", "wrapper"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "alloc",
], optional = true }
thiserror = { version = "1.0.61", default-features = false }

[features]
default = ["calendar", "entry", "info", "error"]
chrono = ["calendar", "dep:chrono"]
calendar = []
entry = []
info = []
error = []
